# streamweave_v5

./: .gitignore  AGENTS.md  AGENT_CODEBASE_GUIDE.md  pyproject.toml  tmp_state_protocol_migration_plan.md  verl修改计划.md  代码重构.md
.aris/: installed-skills-codex.txt
RL/: .gitignore  CHANGELOG_2026-05-06_remove_padding.md  README.md
SFT/: README.md
backend/: __init__.py  base.py  factory.py  gemini.py  image_utils.py  openai.py  pool.py  retry.py
case/: README.md  manifest.json  short_cases_summary.md
configs/: batch_ovo_gemini_1of8_mem6s.yaml  batch_ovo_gemini_1of8_state.yaml  batch_ovo_gemini_1of8_state_note_t.yaml  batch_ovo_gemini_full.yaml  batch_ovo_gemini_full_0516.yaml  batch_ovo_gemini_full_synthesis.yaml  batch_ovo_qwen3vl8b_8gpu_full.yaml  batch_ovo_qwen3vl8b_finetuned_8gpu.yaml  data_cleaning_dataset2.yaml  debug_ovo_gemini_teacher_eval_selected_single.yaml  debug_ovo_qwen3vl8b_finetuned_selected_single.yaml  eval_ovo.yaml  eval_ovo_gemini_one.yaml  eval_ovo_qwen3vl32b_one.yaml  eval_ovo_qwen3vl8b_local_one.yaml  eval_streamingbench.yaml  eval_streamingbench_proactive.yaml
data_engine/: __init__.py
dataset2/: DATASET_RULES.md  bench_format_examples_0514.md  build_query_event_annotations.py  build_rl0515_split.py  build_rl0515_yesno.py  build_rl0516_filter.py  build_rl0516_train.py  build_rl_exp3.py  convert_rl0512_to_0514_pre.py  filter_query_events_0514.py  group_cogstream_source_video.py  normalize_rl_schema_0514.py  rewrite_frame_store_manifests.py  run_rl_query_events_gemini_cleaning.py  split_streamo_rl_0514.py  validate_dataset.py  数据情况.md  (+1 more)
(+454 files in other folders)
