[project]
name = "streamweave-v4"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pillow>=10.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
gemini = ["google-genai>=1.0.0"]
video = ["decord>=0.6.0", "av>=12.0.0", "numpy>=1.24.0"]
yaml = ["pyyaml>=6.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]

